--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "expo": "~46.0.13",
+    "expo-clipboard": "^3.1.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-safe-area-view": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
